============================================================================
OpenPAM	Calamite						2002-02-09

First (beta) release.
============================================================================
$Id$